--- a/Naive Bayes.ipynb
+++ b/Naive Bayes.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Preprocess the data (assuming it's already cleaned as you mentioned)\n",
+    "# 2. Preprocess the data \n",
     "X = data['clean_comment']\n",
     "y = data['category']"
    ]
