--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "# Assuming the dataset is named 'reddit_data.csv'\n",
+    "# Reading the source file\n",
     "df = pd.read_csv(r\"C:\\Users\\rohit\\Downloads\\archive\\Reddit_Data.csv\")\n",
     "\n",
     "# Check the first few rows to ensure data is loaded correctly\n",
